# hackishlibsnarkbindings

./: Cargo.toml  build.rs  hackishlibsnarkbindings.cpp  tinysnark.cpp
examples/: keypair.rs  spend.rs
src/: arith.rs  lib.rs
