[package]
authors = ["Sean Bowe <ewillbefull@gmail.com>"]
build = "build.rs"
description = "Tiny libsnark bindings"
documentation = "https://github.com/ebfull/hackishlibsnarkbindings"
homepage = "https://github.com/ebfull/hackishlibsnarkbindings"
license = "MIT"
name = "hackishlibsnarkbindings"
repository = "https://github.com/ebfull/hackishlibsnarkbindings"
version = "0.1.0"

[build-dependencies]
gcc = "0.3"

[dependencies]
libc = "0.2.4"
lazy_static = "0.1.*"
rustc-serialize = "0.3"
sha2 = "*"
rand = "*"
